--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
+
+
     <string name="app_name">Audacious Self-Promo App</string>
+
+    <string name="hint_contact_name">Contact Name</string>
+    <string name="hint_my_display_name">My Display Name</string>
+    <string name="hint_contact_number">Contact Number</string>
+    <string name="text_include_junior">Include \'Junior\'</string>
+    <string name="text_immediate_start">Immediate Start</string>
+    <string name="hint_available_from_date">Available from date</string>
+    <string name="text_preview_message">Preview Message</string>
+    <string name="text_send_message">send message</string>
+
 </resources>
